test/negative/InvalidMode.hx
class InvalidMode {
	static function main():Void {
		var value = <heredoc mode="surprising">text</heredoc>;
	}
}
